--- a/src/scss/modules/clicker.scss
+++ b/src/scss/modules/clicker.scss
@@ -7,15 +7,21 @@
     flex-direction: column;
   }
   &__coin {
+    position: relative;
+    z-index: 1;
     background: url("/src/assets/img/coin.png") center center / cover;
     width: 300px;
     height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    animation: coinRotate 20s linear infinite;
+    &--animated {
+      animation: coinScale 0.2s linear;
+    }
   }
   &__button {
     &--clicker {
+      position: absolute;
+      top: 39%;
+      z-index: 2;
       background: transparent;
       -webkit-text-stroke: 2px #000;
       color: yellow;
