--- a/src/scss/modules/clicker.scss
+++ b/src/scss/modules/clicker.scss
@@ -24,7 +24,7 @@
       z-index: 2;
       background: transparent;
       -webkit-text-stroke: 2px #000;
-      color: yellow;
+      color: var(--secondary-content-color);
       font-size: 42px;
       font-weight: bold;
     }
