--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,13 @@
+:root {
+  --button-border: 1px solid rgb(255, 0, 0);
+  --button-color: rgb(255, 0, 0);
+  --button-border-available: 1px solid rgb(255, 255, 255);
+  --button-color-available: rgb(255, 255, 255);
+  --background-color: rgb(0, 0, 0);
+  --main-content-color: rgb(255, 255, 255);
+  --secondary-content-color: rgb(255, 255, 0);
+}
+
 @keyframes coinScale {
   from {
     transform: scale(1);
