images animations (besides city)

--- a/src/scss/modules/city.scss
+++ b/src/scss/modules/city.scss
@@ -21,6 +21,10 @@
       height: 150px;
       grid-area: castle;
       margin: auto;
+      animation: cityAppear 1.5s ease-in forwards;
+      &-upgrade {
+        animation: cityAppear 1.5s ease-in alternate;
+      }
     }
   }
   &__container {
