--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,12 +8,33 @@
   --secondary-content-color: rgb(255, 255, 0);
 }
 
+@keyframes cityAppear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 @keyframes coinScale {
   from {
     transform: scale(1);
   }
   to {
-    transform: scale(0.95);
+    transform: scale(0.9);
+  }
+}
+
+@keyframes unitScale {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 
@@ -23,5 +44,16 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes buttonColor {
+  from {
+    color: var(--button-color);
+    border: var(--button-border);
+  }
+  to {
+    color: var(--button-color-available);
+    border: var(--button-border-available);
   }
 }
