--- a/src/scss/modules/clicker.scss
+++ b/src/scss/modules/clicker.scss
@@ -8,20 +8,20 @@
   }
   &__coin {
     position: relative;
-    z-index: 1;
-    background: url("/src/assets/img/coin.png") center center / cover;
-    width: 300px;
-    height: 300px;
-    animation: coinRotate 20s linear infinite;
     &--animated {
-      animation: coinScale 0.2s linear;
+      animation: coinScale 0.1s linear;
+    }
+    &-image {
+      width: 300px;
+      height: 300px;
+      animation: coinRotate 20s linear infinite;
     }
   }
   &__button {
     &--clicker {
       position: absolute;
-      top: 36%;
-      z-index: 2;
+      left: 30%;
+      top: 40%;
       background: transparent;
       -webkit-text-stroke: 2px #000;
       color: var(--secondary-content-color);
