--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,12 +8,21 @@
   --secondary-content-color: rgb(255, 255, 0);
 }
 
-@keyframes cityAppear {
+@keyframes appear {
   from {
     opacity: 0;
   }
   to {
     opacity: 1;
+  }
+}
+
+@keyframes disappear {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
   }
 }
 
