--- a/src/scss/modules/city.scss
+++ b/src/scss/modules/city.scss
@@ -11,8 +11,8 @@
   &__h2 {
     &--city {
       grid-area: header;
-      text-align: left;
-      padding: 0 0 0 32px;
+      text-align: center;
+      padding: 12px 0 0 0;
     }
   }
   &__image {
