--- a/src/scss/modules/clicker.scss
+++ b/src/scss/modules/clicker.scss
@@ -2,9 +2,25 @@
   &--clicker {
     grid-area: clicker;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
+  }
+  &__container {
+    &--clicker {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  &__paragraph {
+    &--clicker {
+      font-size: 24px;
+      padding: 0 4px;
+    }
+    &--counter {
+      color: var(--secondary-content-color);
+    }
   }
   &__coin {
     position: relative;
