--- a/src/scss/modules/upgrades.scss
+++ b/src/scss/modules/upgrades.scss
@@ -1,12 +1,18 @@
 .section {
   &--upgrades {
     grid-area: upgrades;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
   &__container {
     &--upgrades {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
+      margin: 32px 0px 0;
+      max-width: 800px;
     }
   }
   &__tile {
@@ -15,5 +21,16 @@
     height: 80px;
     padding: 4px;
     margin: 2px;
+  }
+  &__paragraph {
+    &--upgrades {
+      text-align: center;
+    }
+  }
+  &__h3 {
+    &--upgrades {
+      text-align: center;
+      padding: 8px 0;
+    }
   }
 }
