--- a/src/scss/modules/units.scss
+++ b/src/scss/modules/units.scss
@@ -42,9 +42,8 @@
     }
   }
 }
-
 .animated {
   width: 75px;
   height: 75px;
-  animation: unitScale 0.5s ease-in-out both;
+  animation: unitScale 0.5s ease-in both;
 }
