--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,9 @@
 :root {
   --button-border: 1px solid rgb(255, 0, 0);
+  --tile-border: 2px solid rgb(255, 0, 0);
   --button-color: rgb(255, 0, 0);
   --button-border-available: 1px solid rgb(255, 255, 255);
+  --tile-border-available: 2px solid rgb(255, 255, 255);
   --button-color-available: rgb(255, 255, 255);
   --background-color: rgb(0, 0, 0);
   --main-content-color: rgb(255, 255, 255);
