upgrades descriptions with animations

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,8 @@
   --background-color: rgb(0, 0, 0);
   --main-content-color: rgb(255, 255, 255);
   --secondary-content-color: rgb(255, 255, 0);
+  --animation-h3: none;
+  --animation-paragraph: none;
 }
 
 @keyframes appear {
