--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,6 +4,7 @@
   --button-color: rgb(255, 0, 0);
   --button-border-available: 2px solid rgb(255, 255, 255);
   --tile-border-available: 2px solid rgb(255, 255, 255);
+  --tile-border-bought: 2px solid rgb(255, 255, 0);
   --button-color-available: rgb(255, 255, 255);
   --background-color: rgb(0, 0, 0);
   --main-content-color: rgb(255, 255, 255);
