--- a/src/scss/modules/clicker.scss
+++ b/src/scss/modules/clicker.scss
@@ -1,3 +1,12 @@
+audio::-webkit-media-controls-panel,
+video::-webkit-media-controls-panel {
+  background-color: #fff;
+}
+
+audio {
+  height: 40px;
+}
+
 .section {
   &--clicker {
     grid-area: clicker;
@@ -5,6 +14,7 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
+    max-height: 90vh;
   }
   &__container {
     &--clicker {
