--- a/src/scss/modules/upgrades.scss
+++ b/src/scss/modules/upgrades.scss
@@ -39,6 +39,18 @@
       margin: 2px;
       animation: buttonColor 0.25s ease-in forwards;
     }
+    &--bought {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: var(--tile-border-bought);
+      border-radius: 16px;
+      width: 80px;
+      height: 80px;
+      padding: 4px;
+      margin: 2px;
+      animation: buttonColor 0.25s ease-in forwards;
+    }
   }
   &__image {
     &--upgrades {
